# ccsearch

./: .gitignore  Cargo.toml  README.md  setup.sh
eval/: golden_queries.json
py/: bench_embed.py  mannaminne.py
py/tests/: test_mannaminne.py
src/: main.rs
z4/: README.md  embed_guard_local.ps1  idle_research.ps1  kill_embed.ps1  quser_idle.ps1  run_embed.bat  smoke_embed.ps1
