[package]
name = "ccsearch"
version = "0.1.0"
edition = "2021"
description = "Hybrid semantic + keyword search over Claude Code sessions and project docs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
