[package]
name = "mannaminne"
version = "0.2.0"
edition = "2021"
description = "Hybrid semantic + keyword search over the personal life-corpus: CC sessions, project docs, Messenger, AI-chat archives, Simplenote. ('i mannaminne' = in living memory.)"

[[bin]]
name = "mannaminne"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
